// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Active anchor renders 1`] = `
<a
  className="AptoButton AptoButton--button AptoButton--primary AptoButton--active"
  href="#"
  onClick={[Function]}
  role="button"
/>
`;

exports[`Active button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--primary AptoButton--active"
  onClick={[Function]}
/>
`;

exports[`Anchor renders with role attribute 1`] = `
<a
  className="AptoButton AptoButton--button AptoButton--primary"
  href="#"
  onClick={[Function]}
  role="button"
/>
`;

exports[`Anchor renders without role 1`] = `
<a
  className="AptoButton AptoButton--button AptoButton--primary"
  href="http://www.google.com"
  onClick={[Function]}
/>
`;

exports[`Anchor target renders 1`] = `
<a
  className="AptoButton AptoButton--button AptoButton--primary"
  href="#"
  onClick={[Function]}
  role="button"
  target="_blank"
/>
`;

exports[`Aria Label attribute renders 1`] = `
<button
  aria-label="some title"
  className="AptoButton AptoButton--button AptoButton--primary"
  onClick={[Function]}
/>
`;

exports[`Button button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--primary"
  onClick={[Function]}
/>
`;

exports[`Button children render 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--primary"
  onClick={[Function]}
>
  Foo
</button>
`;

exports[`Button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--primary"
  onClick={[Function]}
/>
`;

exports[`Danger Button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--danger"
  onClick={[Function]}
/>
`;

exports[`Disabled anchor renders 1`] = `
<a
  className="AptoButton AptoButton--button AptoButton--primary AptoButton--disabled"
  disabled={true}
  href="#"
  onClick={[Function]}
  role="button"
/>
`;

exports[`Disabled button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--primary AptoButton--disabled"
  disabled={true}
  onClick={[Function]}
/>
`;

exports[`Link button renders 1`] = `
<button
  className="AptoButton AptoButton--link AptoButton--primary"
  onClick={[Function]}
/>
`;

exports[`Primary Button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--primary"
  onClick={[Function]}
/>
`;

exports[`Secondary Button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--secondary"
  onClick={[Function]}
/>
`;

exports[`Secondary Link button renders 1`] = `
<button
  className="AptoButton AptoButton--link AptoButton--secondary"
  onClick={[Function]}
/>
`;

exports[`SecondaryDark Button renders 1`] = `
<button
  className="AptoButton AptoButton--button AptoButton--secondaryDark"
  onClick={[Function]}
/>
`;
